examples/k8stest/conf/EdgionPlugins/HmacAuth/03_HTTPRoute_default_hmac-auth-anonymous.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hmac-auth-anonymous-route
  namespace: edgion-default
spec:
  parentRefs:
    - name: edgion-plugins-gateway
      namespace: edgion-test
  hostnames:
    - "hmac-auth-anonymous.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: hmac-auth-anonymous
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001
